objects/blng__BillingConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Config settings for all Billing modules</description>
    <fields>
        <fullName>blng__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Category__c</fullName>
        <label>Category</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__DateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__FieldType__c</fullName>
        <label>Field Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__HelpText__c</fullName>
        <label>Help Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__PercentageValue__c</fullName>
        <label>Percentage Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__PicklistIndicator__c</fullName>
        <label>Picklist Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__QuickScreenId__c</fullName>
        <label>Quick Screen Id</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__StringValue__c</fullName>
        <label>String Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Billing Config</label>
</CustomObject>